# cameratrapai

./: README.md  pyproject.toml
.github/workflows/: markdown_style_checks.yml  python_style_checks.yml  python_tests.yml
speciesnet/: classifier.py  multiprocessing.py  utils.py
speciesnet/scripts/: build_geofence_release.py  run_model.py
